@@ -7,7 +7,7 @@
 # See the file "license.terms" for information on usage and redistribution of
 # this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: oo.test,v 1.46 2009/05/15 10:14:54 dkf Exp $
+# RCS: @(#) $Id: oo.test,v 1.47 2009/06/25 09:44:49 dkf Exp $
 
 package require TclOO 0.6.1 ;# Must match value in configure.in
 if {[lsearch [namespace children] ::tcltest] == -1} {
@@ -644,6 +644,7 @@ test oo-7.6 {OO: inheritance 101 - overridden methods should be oblivious} -setu
     oo::class create Aclass
     oo::class create Bclass
     Bclass create Binstance
+    variable x
 } -body {
     oo::define Aclass {
 	method incr {var step} {
@@ -667,6 +668,7 @@ test oo-7.6 {OO: inheritance 101 - overridden methods should be oblivious} -setu
     lappend result [Binstance incr x]
     lappend result x=$x
 } -result {x=10 x 1 returning:11 11 x=11} -cleanup {
+    unset -nocomplain x
     Aclass destroy
 }
 test oo-7.7 {OO: inheritance and errorInfo} -setup {
@@ -1584,6 +1586,7 @@ test oo-19.1 {OO: varname method} -setup {
     oo::object create inst
     oo::objdefine inst export eval
     set result {}
+    inst eval { variable x }
 } -body {
     inst eval {trace add variable x write foo}
     set ns [inst eval namespace current]
